--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 2223\n",
+        "# chk 00\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -1100,6 +1100,8 @@
         "        ALBUM : \"Album\",\n",
         "        TRACK : \"Track\"}\n",
         "\n",
+        "subtitlefile_extensions = {\".srt\", \".vtt\", \".sbv\", \".ssa\", \".dfxp\", \".ttml\", \".sup\", \".idx\"}\n",
+        "\n",
         "#### API / abstraction \n",
         "\n",
         "#url_pt = re.compile(r\"^((http[s]?):\\/\\/)?([^:\\/\\s]+)((\\/\\w+\\/)*\\/)([\\w\\-\\.]+[^#?\\s]+)(.*)?(#[\\w\\-]+)?\")\n",
@@ -1322,8 +1324,8 @@
         "    watched = False\n",
         "\n",
         "class DownloadResult:\n",
-        "    def __init__(this, name, size = 0, date = \"\", seeders = \"\", leechers = \"\", uploader = \"\", href = \"\", downloaded= False, watched= False, attrs= None):\n",
-        "        this.name = name\n",
+        "    def __init__(this, resulturl, size = 0, date = \"\", seeders = \"\", leechers = \"\", uploader = \"\", href = \"\", downloaded= False, watched= False, attrs= None):\n",
+        "        this.resulturl = resulturl\n",
         "        this.size = size\n",
         "        this.date = date \n",
         "        this.seeders = seeders\n",
@@ -1334,7 +1336,7 @@
         "        this.watched = watched\n",
         "        this.attrs = attrs\n",
         "\n",
-        "    name: str\n",
+        "    resulturl: str\n",
         "    size = 0\n",
         "    magnet = date = seeders = leechers = uploader = href = \"\"\n",
         "    downloaded = watched = False\n",
@@ -1499,13 +1501,13 @@
         "\n",
         "    def actionhandler(self, e):\n",
         "        if e.column == ' ':\n",
-        "            adddownload = self.results[e.row]\n",
-        "            download1337x(adddownload, self.attrs)\n",
+        "            res: DownloadResult = self.results[e.row]\n",
+        "            download1337x(res, self.attrs)\n",
         "\n",
         "    def getdataframe(self):\n",
         "        resulttablesource = {\"Name\":[],  \"Date\": [], \"Size\": [],\"Seeders\": [], \"Leechers\": [], \"Uploader\": [], \" \": []}\n",
         "        for result in self.results:\n",
-        "            resulttablesource['Name'].append(result.name)\n",
+        "            resulttablesource['Name'].append(result.resulturl)\n",
         "            resulttablesource['Size'].append(result.size)\n",
         "            resulttablesource['Date'].append(result.date)\n",
         "            resulttablesource['Seeders'].append(result.seeders)\n",
@@ -1620,7 +1622,8 @@
         "        name = name.split(\"720p\")[0]    \n",
         "    table = name.maketrans(\".\",\" \",\"'()\")\n",
         "    trans = name.translate(table)\n",
-        "    search = year_pt1.search(trans)\n",
+        "    search = \n",
+        "    .search(trans)\n",
         "    if search: \n",
         "        year = search.group()\n",
         "        res = f\"{trans.split(year)[0].strip()} {year}\"\n",
@@ -2154,7 +2157,7 @@
         "    tf = handle.torrent_file()\n",
         "    files = tf.files()\n",
         "    priorities = handle.get_file_priorities()\n",
-        "    for i in range(files.num_files()):\n",
+        "    for i in range(files.num_files()):              # Delete files if they are not selected\n",
         "        file_path = path + \"/\" + files.file_path(i)\n",
         "        if os.path.isfile(file_path) and priorities[i] == 0:\n",
         "            !rm \"$file_path\"\n",
@@ -2163,7 +2166,7 @@
         "                !rm -r \"$dirpath\"\n",
         "    if os.path.isdir(maindir):\n",
         "        dircontent = next(os.walk(maindir))[1]\n",
-        "        for path in dircontent:\n",
+        "        for path in dircontent:                     # Delete empty dirs\n",
         "            if is_empty(path):\n",
         "                !rm -r \"$path\"\n",
         "\n",
@@ -2177,68 +2180,51 @@
         "    elif attrs.type_ == SEASON or attrs.type_ == EPISODE:\n",
         "        diritem =  ('', clean_season(path))\n",
         "        attrs.downloaded_dirs.append(diritem)\n",
-        "  \n",
-        "def after_shave(path, newname, v= False, pathitems = []):\n",
-        "    dircontent = next(os.walk(path))[2]\n",
-        "    diritem = ('', [])\n",
-        "    srtcount = 0\n",
-        "    for file in dircontent:\n",
-        "        suff = ''\n",
-        "        split = os.path.splitext(file)\n",
-        "        filenamewithoutextension = split[0]\n",
-        "        ext = split[1]\n",
-        "        p1 = path + \"/\" + file\n",
-        "        if any(contains(file, check) for check in skip_list):\n",
-        "            if v:\n",
-        "                print(f\"Deleting: {p1[36:]}\")\n",
-        "            !rm \"$p1\"\n",
-        "            continue\n",
-        "        elif  (ext == \".mp4\" or ext == \".mkv\" or ext == \".srt\" or ext == \".idx\"):\n",
-        "            if ext == \".srt\": \n",
-        "                langsearch = langs_pt.findall(filenamewithoutextension)     #if digitssuff_pt.split(filenamewithoutextension)[0] != newname:\n",
-        "                if langsearch:\n",
-        "                    suff = f\".{title(langsearch[-1])}\" \n",
-        "                else:\n",
-        "                    srtcount += 1\n",
-        "                    suff = f\"-{srtcount}\"\n",
         "\n",
-        "            if filenamewithoutextension != newname:\n",
-        "                filenewname = newname + suff + ext\n",
-        "                if v: print(f\"Renaming: {p1[36:]} to {filenewname}\")\n",
-        "                p2 = path + \"/\" + filenewname\n",
-        "                !mv \"$p1\" \"$p2\"\n",
-        "                file = filenewname\n",
-        "            diritem[1].append(file)\n",
-        "    pathitems.append(diritem)\n",
-        "    subdir = \"Subs\"\n",
-        "    subspath = path + \"/\" + subdir\n",
-        "    if not os.path.exists(subspath):\n",
-        "        subdir = \"subs\"\n",
-        "        subspath = path + \"/\" + subdir\n",
-        "        if not os.path.exists(subspath):\n",
-        "            return\n",
-        "    subs =  next(os.walk(subspath))[2]\n",
-        "    count = 0\n",
-        "    item2 = (subdir, [])\n",
-        "    for sub in subs:\n",
-        "        split = os.path.splitext(sub)\n",
-        "        ext = split[1]\n",
-        "        srtname = f\"{newname} {str(count)}\" if count > 0 else newname\n",
-        "        if ext == '.srt' and digitssuff_pt.split(split[0])[0] != newname:\n",
-        "            newsub = srtname + ext \n",
-        "            p1 = subspath + \"/\" + sub\n",
-        "            p2 = subspath + \"/\" + newsub\n",
-        "            if v:\n",
-        "                print(f\"Renaming: {p1[36:]} to {newsub}\")\n",
-        "            !mv \"$p1\" \"$p2\"\n",
-        "            count += 1\n",
-        "            item2[1].append(newsub)\n",
-        "        else:\n",
-        "            item2[1].append(sub)\n",
-        "        pathitems.append(item2)\n",
+        "def after_shave(diritem, newname, v= False, pathitems = []):\n",
+        "    maindircontent = next(os.walk(diritem))\n",
+        "    originaldiritems = [('', maindircontent[2])]\n",
+        "    for dir in maindircontent[1]:\n",
+        "        if 'sub' in dir.lower():\n",
+        "            subspath = f\"{diritem}/{dir}\" \n",
+        "            originaldiritems.append((dir, next(os.walk(subspath))[2]))\n",
+        "            break\n",
+        "    for diritem in originaldiritems:\n",
+        "        diritem = (diritem[0], [])\n",
+        "        srtcount = 0\n",
+        "        for filename in diritem[1]:\n",
+        "            suffix = ''\n",
+        "            filename_split = os.path.splitext(filename)\n",
+        "            filenamewithoutextension = filename_split[0]\n",
+        "            fileextension = filename_split[1].lower()\n",
+        "            originalfilepath = f'{diritem}/{filename}'\n",
+        "            if any(contains(filename, check) for check in skip_list):\n",
+        "                if v:\n",
+        "                    print(f\"Deleting: {originalfilepath}\")\n",
+        "                cmd = f'rm \"{originalfilepath}\"'\n",
+        "                !$cmd\n",
+        "                continue\n",
+        "            elif  (fileextension == \".mp4\" or fileextension == \".mkv\" or fileextension in subtitlefile_extensions):\n",
+        "                if fileextension in subtitlefile_extensions: \n",
+        "                    langsearch = langs_pt.findall(filenamewithoutextension)     #if digitssuff_pt.split(filenamewithoutextension)[0] != newname:\n",
+        "                    if langsearch:\n",
+        "                        suffix = f\".{title(langsearch[-1])}\" \n",
+        "                    else:\n",
+        "                        srtcount += 1\n",
+        "                        suffix = f\"-{srtcount}\"\n",
+        "                if filenamewithoutextension != newname:\n",
+        "                    filenewname = newname + suffix + fileextension\n",
+        "                    if v: print(f\"Renaming: {originalfilepath[36:]} to {filenewname}\")\n",
+        "                    newsubtitlefile = f\"{diritem}/{filenewname}\"\n",
+        "                    cmd = f'mv \"{originalfilepath}\" \"{newsubtitlefile}\"'\n",
+        "                    !$cmd\n",
+        "                    filename = filenewname\n",
+        "                diritem[1].append(filename)\n",
+        "        pathitems.append(diritem)\n",
+        "    if cmd: pass\n",
         "    return\n",
         "\n",
-        "def clean_movies_dir(movie_path = config.movies_path, v= False, backup = False, delete_empty = False, clean = True) :\n",
+        "def clean_movies_dir(movie_path= config.movies_path, v= False, backup= False, delete_empty = False, clean = True) :\n",
         "    dir_content = filter_checks(next(os.walk(movie_path))[1])\n",
         "    path = \"\"\n",
         "    for dir in dir_content :\n",
@@ -2247,9 +2233,8 @@
         "            size = pathsize(path)\n",
         "            if size < size_limit:\n",
         "                !rm -r \"$path\"\n",
-        "\n",
-        "                if backup and False: #fixbackup\n",
-        "                    for mvdir in movies_basenames:\n",
+        "                if backup and config.moviesbackups: #fixbackup\n",
+        "                    for mvdir in config.moviesbackups:\n",
         "                        if not mvdir in movie_path:\n",
         "                            path0 = \"bk path\"\n",
         "                            size = pathsize(path0)\n",
@@ -2258,7 +2243,6 @@
         "                                    print(f\"Deleting: {path0} size: {data_str(size)}\")\n",
         "                                !rm -r \"$path0\" \n",
         "                continue\n",
-        "          \n",
         "        if clean:\n",
         "            clean_movie(path, dir, movie_path)\n",
         "\n",
@@ -2336,11 +2320,14 @@
         "\n",
         "linkhtmlstr = 'target=\"_blank\" style= \"color: rgb(1, 74, 118); text-decoration: none;\"'\n",
         "\n",
-        "def process_external_link(title_tag, suff_text= \"\", base= \"\"):\n",
-        "    if suff_text:\n",
-        "        title = str(title_tag).replace(\"</a>\", f\" {suff_text}</a>\")\n",
-        "    title = title.replace('<a href=\"', f'<a {linkhtmlstr} href=\"{base}') \n",
-        "    return title\n",
+        "def process_external_link(title, suff_text= \"\", base= \"\"):\n",
+        "    if title:\n",
+        "        title = str(title)\n",
+        "        if suff_text:\n",
+        "            title = title.replace(\"</a>\", f\" {suff_text}</a>\")\n",
+        "        title = title.replace('<a href=\"', f'<a {linkhtmlstr} href=\"{base}') \n",
+        "        return title\n",
+        "    return ''\n",
         "\n",
         "def updateIMDBresult(result: IMDBResult, page):\n",
         "    if page in result.resultpages:\n",
@@ -2730,6 +2717,7 @@
         "        attrs = DownloadAttrs()\n",
         "    if not result:    \n",
         "        result = SearchResult(search= search, site= X1337X, category= ALLCATEGORIES_TD, attrs= attrs)\n",
+        "        appstate.searchresults.append(result)\n",
         "    search_s = search.replace(\"'\", \" \").replace(\" \",\"%20\")\n",
         "    parameters = f\"/sort-category-search/{search_s}/{category}/{sort}/{page}/\" if category else f\"/sort-search/{search_s}/{sort}/{page}/\"\n",
         "    url = X1337XPROXEY_BASE + parameters\n",
@@ -2782,7 +2770,7 @@
         "                    leechers = alldata[2].text\n",
         "                    uploader = alldata[5].a.text\n",
         "                    href = X1337XPROXEY_BASE + alldata[0].findAll(\"a\")[1]['href']\n",
-        "                    res = DownloadResult(name= resulturl, size= size, date= date, seeders= seeders, leechers= leechers, uploader= uploader, href= href)\n",
+        "                    res = DownloadResult(resulturl= resulturl, size= size, date= date, seeders= seeders, leechers= leechers, uploader= uploader, href= href)\n",
         "                    results.append(res)\n",
         "                result.resultcount = len(results)\n",
         "                result.results = results\n",
@@ -3532,71 +3520,77 @@
         "    attrs: DownloadAttrs = handle.attrs\n",
         "    status = handle.status()\n",
         "    name = status.name\n",
-        "    p1 = status.save_path + \"/\" + name\n",
-        "    p0 = status.save_path\n",
+        "    presumedlocalsavepath = status.save_path + \"/\" + name\n",
+        "    localsavepath = status.save_path\n",
+        "    donesavepath = done_path + \"/\" + attrs.save_name\n",
         "    info(f'Transfering files for: {name}\\nNewname: {attrs.save_name}')\n",
-        "    p2 = done_path + \"/\" + attrs.save_name\n",
-        "    if os.path.exists(p1):\n",
-        "        hasnodir = not os.path.isdir(p1)\n",
+        "    if os.path.exists(presumedlocalsavepath):\n",
+        "        hasnodir = not os.path.isdir(presumedlocalsavepath)\n",
         "        if hasnodir: #move all dirless files here\n",
-        "            info(f'The download doesnt have a directory\\nMoving the download into a directory with the same name.')\n",
-        "            p0 = status.save_path + \"/\" + os.path.splitext(name)[0]\n",
-        "            os.makedirs(p0, exist_ok = True)\n",
-        "            if not copy:\n",
-        "                info(f'Moving {p1} to {p0}')\n",
-        "                !mv \"$p1\" \"$p0\"\n",
-        "            else:\n",
-        "                info(f'Copying {p1} to {p0}')\n",
-        "                !cp \"$p1\" \"$p0\"\n",
-        "            p1 = p0 \n",
-        "        shave_download(handle, p0, p1)\n",
-        "        clean_download(attrs, path = p1)\n",
+        "            info(f'The download doesnt have a directory\\nMoving download files into a directory with the same name.')\n",
+        "            localsavepath = status.save_path + \"/\" + os.path.splitext(name)[0]\n",
+        "            os.makedirs(localsavepath, exist_ok = True)\n",
+        "            files = handle.torrent_file().files()\n",
+        "            for i in range(files.num_files()):\n",
+        "                file_path = status.save_path + \"/\" + files.file_path(i)\n",
+        "                if not copy:\n",
+        "                    info(f'Moving {file_path} to {localsavepath}')\n",
+        "                    cmd = f'mv \"{file_path}\" \"{localsavepath}\"'\n",
+        "                else:\n",
+        "                    info(f'Copying {file_path} to {localsavepath}')\n",
+        "                    cmd = f'cp \"{file_path}\" \"{localsavepath}\"'\n",
+        "                !$cmd \n",
+        "            presumedlocalsavepath = localsavepath \n",
+        "        shave_download(handle, localsavepath, presumedlocalsavepath)\n",
+        "        clean_download(attrs, path= presumedlocalsavepath)\n",
         "        if (not copy) or hasnodir:\n",
-        "            info(f'Moving to done path with the new name\\n {p1} to {p2}')\n",
-        "            !mv \"$p1\" \"$p2\"\n",
+        "            info(f'Moving to done path with the new name\\n {presumedlocalsavepath} to {donesavepath}')\n",
+        "            cmd = f'mv \"{presumedlocalsavepath}\" \"{donesavepath}\"'\n",
         "        else:\n",
-        "            info(f'Copying to done path with the new name\\n {p1} to {p2}')  \n",
-        "            !cp -r \"$p1\" \"$p2\"\n",
+        "            info(f'Copying to done path with the new name\\n {presumedlocalsavepath} to {donesavepath}')  \n",
+        "            cmd = f'cp -r \"{presumedlocalsavepath}\" \"{donesavepath}\"'\n",
+        "        !$cmd\n",
         "    else:\n",
-        "        m = f\"Download dir or file is missing {p1} \"\n",
+        "        m = f\"Download dir or file is missing {presumedlocalsavepath} \"\n",
         "        error(m)\n",
         "        release()\n",
         "    if not attrs.save_name:\n",
         "        attrs.save_name = name\n",
-        "        p2 = p2 + attrs.save_name \n",
+        "        donesavepath = donesavepath + attrs.save_name \n",
         "\n",
-        "    pre_download_transfer(attrs, p2)  \n",
-        "    if attrs.type_ == EPISODE and os.path.isdir(p2):\n",
-        "        p2 = p2 + \"/\"     \n",
-        "    if os.path.exists(p2):\n",
+        "    pre_download_transfer(attrs, donesavepath)  \n",
+        "    if attrs.type_ == EPISODE and os.path.isdir(donesavepath):\n",
+        "        donesavepath = donesavepath + \"/\"     \n",
+        "    if os.path.exists(donesavepath):\n",
         "        if attrs.replace and attrs.downloaded_dirs:\n",
         "            clean_download_destination(attrs) \n",
-        "\n",
         "        info(f'Saving {attrs.save_name} to: {attrs.save_path}')\n",
-        "        msg = !rsync --size-only -r \"$p2\" \"$attrs.save_path\"\n",
-        "        if msg:\n",
-        "            error(lines = msg)\n",
-        "            list_lines(msg)\n",
+        "        cmd = f'rsync --size-only -r \"{donesavepath}\" \"{attrs.save_path}\"'\n",
+        "        output01 = !$cmd\n",
+        "        if output01:\n",
+        "            error(lines = output01)\n",
         "            main_verification = False\n",
         "        else:\n",
         "            main_verification = verify_saving_download(attrs)   \n",
         "        if attrs.backup and attrs.baksv:\n",
-        "            for bk in attrs.baksv:\n",
-        "                info(f'Copying {attrs.save_name} to: {bk}')\n",
-        "                msg = !rsync --size-only -r \"$p2\" \"$bk\"\n",
-        "                if msg:\n",
-        "                    error(lines = msg)\n",
-        "                    list_lines(msg) \n",
+        "            for bkpath in attrs.baksv:\n",
+        "                info(f'Copying {attrs.save_name} to: {bkpath}')\n",
+        "                cmd = f'!rsync --size-only -r \"{donesavepath}\" \"{bkpath}\"'\n",
+        "                output01 = !$cmd\n",
+        "                if output01:\n",
+        "                    error(lines = output01)\n",
         "        if main_verification:\n",
-        "            info(f'Deleting {p2}')\n",
-        "            !rm -r \"$p2\"    \n",
+        "            info(f'Deleting {donesavepath}')\n",
+        "            cmd = f'rm -r \"{donesavepath}\"' \n",
+        "            !$cmd\n",
         "            if attrs.uncomplete_source and os.path.exists(attrs.uncomplete_source):\n",
         "                info(f'Deleting uncompleted source: {attrs.uncomplete_source}')\n",
-        "                !rm -r \"$attrs.uncomplete_source\"  \n",
+        "                cmd = f'rm -r \"{attrs.uncomplete_source}\"'\n",
+        "                !$cmd\n",
         "            if attrs.replace and attrs.old_files:\n",
         "                info('Deleting replaced files.')\n",
-        "                for p in attrs.old_files:\n",
-        "                    rm(p, process_backup = attrs.backup) \n",
+        "                for oldfilepath in attrs.old_files:\n",
+        "                    rm(oldfilepath, process_backup = attrs.backup) \n",
         "\n",
         "            info(f'Done saving {attrs.save_name}.')\n",
         "            return True   \n",
@@ -3607,6 +3601,7 @@
         "            return False\n",
         "    else:\n",
         "        error(f\"Files for: {attrs.save_name} were not transfered.\")\n",
+        "        if cmd: pass\n",
         "        return False\n",
         "\n",
         "def save_download_progress(handle, savepath):\n",
@@ -4066,7 +4061,6 @@
         "    category = getsitecategory(category, site)\n",
         "    if site == X1337X:\n",
         "        result = search1337x(search, sort= l337xsort, category= category, page= page, attrs= attrs)\n",
-        "        appstate.searchresults.append(result)\n",
         "    if result:\n",
         "        searchresultview = getsearchresultview(result)\n",
         "        viewstatus = False if source == SEARCH_TAB else True\n",
