--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 00\n",
+        "# chk 001\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -972,6 +972,7 @@
         "#### API / Consts\n",
         "\n",
         "skip_list = ['.txt','.inf','.info','.nfo','www.yts','rarbg_do_not']\n",
+        "subtitlefile_extensions = {\".srt\", \".vtt\", \".sbv\", \".ssa\", \".dfxp\", \".ttml\", \".sup\", \".idx\"}\n",
         "\n",
         "today = date.today()\n",
         "thisyear = str(today.year)\n",
@@ -1099,7 +1100,6 @@
         "        MUSIC : \"Music\",\n",
         "        ALBUM : \"Album\",\n",
         "        TRACK : \"Track\"}\n",
-        "\n",
         "subtitlefile_extensions = {\".srt\", \".vtt\", \".sbv\", \".ssa\", \".dfxp\", \".ttml\", \".sup\", \".idx\"}\n",
         "\n",
         "#### API / abstraction \n",
@@ -1619,11 +1619,11 @@
         "    if quality in name:\n",
         "        name = name.split(quality)[0]\n",
         "    elif \"720p\" in name:\n",
-        "        name = name.split(\"720p\")[0]    \n",
+        "        name = name.split(\"720p\")[0]    subtitlefile_extensions = {\".srt\", \".vtt\", \".sbv\", \".ssa\", \".dfxp\", \".ttml\", \".sup\", \".idx\"}\n",
+        "\n",
         "    table = name.maketrans(\".\",\" \",\"'()\")\n",
         "    trans = name.translate(table)\n",
-        "    search = \n",
-        "    .search(trans)\n",
+        "    search = year_pt.search(trans)\n",
         "    if search: \n",
         "        year = search.group()\n",
         "        res = f\"{trans.split(year)[0].strip()} {year}\"\n",
