--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 001\n",
+        "# chk 002\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -1100,7 +1100,6 @@
         "        MUSIC : \"Music\",\n",
         "        ALBUM : \"Album\",\n",
         "        TRACK : \"Track\"}\n",
-        "subtitlefile_extensions = {\".srt\", \".vtt\", \".sbv\", \".ssa\", \".dfxp\", \".ttml\", \".sup\", \".idx\"}\n",
         "\n",
         "#### API / abstraction \n",
         "\n",
@@ -1619,8 +1618,7 @@
         "    if quality in name:\n",
         "        name = name.split(quality)[0]\n",
         "    elif \"720p\" in name:\n",
-        "        name = name.split(\"720p\")[0]    subtitlefile_extensions = {\".srt\", \".vtt\", \".sbv\", \".ssa\", \".dfxp\", \".ttml\", \".sup\", \".idx\"}\n",
-        "\n",
+        "        name = name.split(\"720p\")[0]    \n",
         "    table = name.maketrans(\".\",\" \",\"'()\")\n",
         "    trans = name.translate(table)\n",
         "    search = year_pt.search(trans)\n",
@@ -2181,6 +2179,7 @@
         "        diritem =  ('', clean_season(path))\n",
         "        attrs.downloaded_dirs.append(diritem)\n",
         "\n",
+        "subtitlefile_extensions = {\".srt\", \".vtt\", \".sbv\", \".ssa\", \".dfxp\", \".ttml\", \".sup\", \".idx\"}\n",
         "def after_shave(diritem, newname, v= False, pathitems = []):\n",
         "    maindircontent = next(os.walk(diritem))\n",
         "    originaldiritems = [('', maindircontent[2])]\n",
